--- a/index.html
+++ b/index.html
@@ -88,32 +88,39 @@
                   <thead>
                     <tr>
                       <th>時間</th>
+		      <th>司会</th>
                       <th>内容</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td>19:00〜19:05</td>
+		      <td>職員</td>
                       <td>開幕</td>
                     </tr>
                     <tr>
                       <td>19:05〜19:50</td>
-                      <td>我流Git活用法 - いろふ</td>
+		      <td>いろふ</td>
+                      <td>我流Git活用法</td>
                     </tr>
                     <tr>
                       <td>19:50〜20:00</td>
+		      <td>なし</td>
                       <td>休憩</td>
                     </tr>
                     <tr>
                       <td>20:00〜20:45</td>
-                      <td>目指せ脱初心者！現場で使える実践Git - うらがみ</td>
+		      <td>うらがみ</td>
+                      <td>目指せ脱初心者！現場で使える実践Git</td>
                     </tr>
                     <tr>
                       <td>20:45〜21:00</td>
+		      <td>職員</td>
                       <td>閉幕</td>
                     </tr>
                     <tr>
                       <td>21:00〜</td>
+		      <td>なし</td>
                       <td>懇親会</td>
                     </tr>
                   </tbody>
